--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>测速面板 - 网速测试,刷流量,流量消耗,定向流量消耗,在线测速,宽带测速,专业测网速</title>
+  <title>测速面板 - 流量消耗器,网速测试,刷流量,流量消耗,定向流量消耗,在线测速,宽带测速,专业测网速</title>
   <meta name="keywords"
-    content="测速,测网速,网速,刷流量,流量消耗定，向流量消耗，电信定向流量消耗，移动定向流量消耗，联通定向流量消耗,广电定向流量消耗,网络质量,5G网速,5G测速,5G网络,在线测速,网速测试,宽带测速,视频测试,Wi-Fi测速,联通,电信,移动,广电,上网速度,速度测试,宽带测试,千兆宽带,全屋Wi-Fi,双千兆,三千兆,光纤,ping,speedtest,speed,test,adsl,ftth,iot,internet,tracert,traceroute,IPv6,Wi-Fi 6,6G,网维助手">
+    content="流量消耗器,测速,测网速,网速,刷流量,流量消耗定，向流量消耗，电信定向流量消耗，移动定向流量消耗，联通定向流量消耗,广电定向流量消耗,网络质量,5G网速,5G测速,5G网络,在线测速,网速测试,宽带测速,视频测试,Wi-Fi测速,联通,电信,移动,广电,上网速度,速度测试,宽带测试,千兆宽带,全屋Wi-Fi,双千兆,三千兆,光纤,ping,speedtest,speed,test,adsl,ftth,iot,internet,tracert,traceroute,IPv6,Wi-Fi 6,6G,网维助手">
   <meta name="description"
-    content="测速面板（TestSpeed.cc）提供网速测试，刷流量,流量消耗，定向流量消耗，电信定向流量消耗，移动定向流量消耗，联通定向流量消耗，广电定向流量消耗，网络质量测试，宽带测速，Wi-Fi测速，5G测速，IPv6测速，专网测速等专业服务。">
+    content="测速面板（TestSpeed.cc）提供网速测试,流量消耗器,刷流量,流量消耗，定向流量消耗，电信定向流量消耗，移动定向流量消耗，联通定向流量消耗，广电定向流量消耗，网络质量测试，宽带测速，Wi-Fi测速，5G测速，IPv6测速，专网测速等专业服务。">
   <meta http-equiv="Cache-Control" content="no-store" />
   <link rel="stylesheet" href="./res/dashlite.css">
   <link rel="stylesheet" href="./res/style.css">
